# VideohubRouterCLI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: Cmakelists.txt  VideohubRouterCli.cpp  VideohubRouterCli.h  main.cpp
diagram/: Videohub.drawio  ~$Videohub.drawio.bkp  ~$Videohub.drawio.dtmp
src/: CMakeLists.txt  Feedback.cc  Feedback.h  Menu.cpp  Menu.h  TelnetClient.cpp  TelnetClient.h  VideohubRouter.cpp  VideohubRouter.h  VideohubRouterCli.cpp  VideohubRouterCli.h  main.cpp
src/logs/: TLog.txt
src/sqlite/: cmakelists.txt
testfiles/: Videohub Telnet dump_20210604.txt  response.txt
